name:                proof-club
version:             0.1.0.0
synopsis:            The website for the proof club that I organize.
homepage:            proof-club.theentiredoughnut.com
license:             MIT
license-file:        License
author:              Michael Baker
maintainer:          michaeltbaker@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable proof-club
  main-is:             Renderer.hs
  ghc-options:         -Wall -fno-warn-orphans
  hs-source-dirs:      src
  build-depends:       base         ==4.5.*,
                       time         ==1.1.4,
                       blaze-html   ==0.5.1.3,
                       blaze-markup ==0.5.1.4

executable tests
  main-is:             ListerSpec.hs
  hs-source-dirs:      src, test
  build-depends:       base  ==4.5.*,
                       hspec ==1.4.4
